Fixing display size, make colors more contrastful

--- a/assets/styles/_media.scss
+++ b/assets/styles/_media.scss
@@ -207,6 +207,14 @@
       }
     }
   }
+
+  #cursor-border {
+    display: none;
+  }
+
+  #cursor {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1432px) {
